<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaterialQQ Lite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="qqservice_init_err">初始化QQService失败！</string>
    <string name="idtxthint">QQ号码（暂不支持邮箱）</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登  录</string>
    <string name="forgot_pwd"><u>忘记密码？</u></string>
    <string name="new_user">新用户</string>
    <string name="loading">登录中</string>
    <string name="login_failed">登录失败！</string>
    <string name="id_or_pwd_err">帐号或密码错误，请重新输入。</string>
    <string name="enter_id">请输入帐号</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="enter_id_toolong">输入的帐号过长，请检查后重新输入。</string>
    <string name="cancel">取消</string>
    <string name="enter_verifycode">输入验证码</string>
    <string name="finish">完成</string>
    <string name="change"><u>看不清？换一张</u></string>
    <string name="vc_tips">QQ安全中心温馨提示：该帐号存在安全风险，为了您的帐号安全，请您填写验证码。</string>
    <string name="vc_err">验证码错误，请重新输入。</string>
    <string name="exitdlg1_exit">退出QQ</string>
    <string name="exitdlg2_exit">退出</string>
    <string name="exitdlg2_confirm">你确定退出QQ？</string>
    <string name="exitqqapp">确定退出MatrialQQ Lite？</string>
    <string name="exitdlg2_stillrecvmsg">退出后仍接收消息通知</string>
    <string name="exitdlg2_cancel">取消</string>
    <string name="exitdlg2_ok">确定</string>
    <string name="exit_qq">退出MaterialQQ Lite</string>
    <string name="exit_account">退出帐号</string>
    <string name="msg">消息</string>
    <string name="send">发送</string>
    <string name="search"> 搜索</string>
    <string name="contact">联系人</string>
    <string name="group">群</string>
    <string name="contacts">通讯录</string>
    <string name="discussion">讨论组</string>
    <string name="living_services">生活服务</string>
    <string name="buddyteam">好友分组</string>
    <string name="manage">管理</string>
    <string name="team">分组</string>
    <string name="all">全部</string>
    <string name="dynamic">动态</string>
    <string name="setting">设置</string>
    <string name="online">在线</string>
    <string name="hidden">隐身</string>
    <string name="confirm">确认</string>
    <string name="exit_cur_account">是否退出当前帐号？</string>
    <string name="ok">确定</string>
    <string name="switch_user_bubble">切换用户气泡图片：</string>
    <string name="bgrun">MingQQ正在后台运行...</string>
    <string name="nonewmsg">暂时没有最新消息</string>
    <string name="newmsg_1">你有</string>
    <string name="newmsg_2">条新消息</string>
    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu closed</string>
    <string name="aboutandfeedback">关于和反馈</string>
    <string name="qq_Status">隐身/在线</string>

    <string name="color_chooser">主题颜色</string>
    <string name="app_name_beta">MaterialQQ Lite尝鲜版</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="readme">重要说明</string>
    <string name="opensource">开源项目</string>
    <string name="developers">开发者和致谢</string>
    <string name="crashlog">崩溃日志</string>
    <string name="title_activity_readme">ReadmeActivity</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="thanks">感谢微博@MakicLin费浩林 提供最新的图标设计\n感谢微博@某烧饼 对滑动返回和translucent bar的建议与指导\n感谢微博@大大陈屋子 和酷安网友Soomy提供的部分图标设计\n感谢网友们的测试和建议\n感谢MingQQ的开发者和将来参与开源维护的各位</string>
    <string name="title_activity_opensource">OpensourceActivity</string>

</resources>
